* Experimental feature to allow translation of block expiry times
  Implementation only for Finnish currently
* (bug 3284) Ipblocklist paging, substring search
* Allow filtering of robot edits in Special:Watchlist by stting 
  $wgFilterRobotsWL = true.
* (bug 2885) More PHP 5.1 fixes: skin, search, log, undelete
* Fix interlanguage links on special pages when extra namespaces configured
* IP privacy fix for blocklist search on autoblocks
* Support for a license selection box on Special:Upload, configurable from MediaWiki:Licenses
* Security fix for <math>
* Security fix for tables
* Security fix for Special:Upload license selection list
* Don't override edit conflict suppression on section edits; section merging
  should provide the expected transparency here and fits usage patterns better.


=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem
cases, but this is not recommended on live sites. (This must be set for
MathML to display properly in Mozilla.)


For notes on 1.5.x and older releases, see HISTORY.


=== Online documentation ===

Documentation for both end-users and site administrators is currently being
built up on Meta-Wikipedia, and is covered under the GNU Free Documentation
License:

  http://meta.wikipedia.org/wiki/Help:Contents


=== Mailing list ===

A MediaWiki-l mailing list has been set up distinct from the Wikipedia
wikitech-l list:

  http://mail.wikipedia.org/mailman/listinfo/mediawiki-l

A low-traffic announcements-only list is also available:
  http://mail.wikipedia.org/mailman/listinfo/mediawiki-announce

It's highly recommended that you sign up for one of these lists if you're
going to run a public MediaWiki, so you can be notified of security fixes.


=== IRC help ===

There's usually someone online in #mediawiki on irc.freenode.net